--- a/A003/A003001001L_02.html
+++ b/A003/A003001001L_02.html
@@ -16,9 +16,16 @@
     <link rel="shortcut icon" href="../new_images/common/favicon.ico">
     <link href="../new_css/lib/swiper.min.css" rel="stylesheet" />
     <link href="../new_css/reset.css" rel="stylesheet" />
-    <link href="../new_css/layout.css" rel="stylesheet" />
-    <link href="../new_css/contents.css" rel="stylesheet" />
+    <!-- <link href="../new_css/layout.css" rel="stylesheet" />
+    <link href="../new_css/contents.css" rel="stylesheet" /> -->
     <link href="../new_css/main.css" rel="stylesheet" />
+
+    <!-- <link href="../new_css/kimjaeseob.css" rel="stylesheet" /> -->
+
+    <link href="../new_css/layout_m.css" rel="stylesheet" />
+    <link href="../new_css/contents_m.css" rel="stylesheet" />
+    <link href="../new_css/kimjaeseob_m.css" rel="stylesheet" />
+
     <script src="../new_js/lib/jquery-2.1.1.js"></script>
     <script src="../new_js/lib/swiper.min.js"></script>
     <script src="../new_js/ui.js"></script>
@@ -312,7 +319,7 @@
                                     <li><em class="stepCount">4</em><span class="txt">가입완료</span></li>
                                 </ol>
                             </div>
-                            <div class="termsDiv">
+                            <div class="termsDiv verPC">
                                 <h3 class="tremsTit">HRD-Net 이용약관 <span>(필수)</span></h3>
                                 <div class="termsEle">
                                     <div class="termsCont">
@@ -436,6 +443,10 @@
                             </div>
 
                         </div>
+                    </div>
+
+                    <div class="termsDiv">
+                        d
                     </div>
                 </div>
             </div>
