--- a/A003/A003001001L_01.html
+++ b/A003/A003001001L_01.html
@@ -18,9 +18,8 @@
     <link href="../new_css/reset.css" rel="stylesheet" />
     <link href="../new_css/layout.css" rel="stylesheet" />
     <link href="../new_css/contents.css" rel="stylesheet" />
-    <link href="../new_css/main.css" rel="stylesheet" />
-
     <link href="../new_css/kimjaeseob.css" rel="stylesheet" />
+    <link href="../new_css/main.css" rel="stylesheet" />
 
     <!-- <link href="../new_css/layout_m.css" rel="stylesheet" />
 	    <link href="../new_css/contents_m.css" rel="stylesheet" />
@@ -129,7 +128,7 @@
                                             <li><a href="">원격훈련</a></li>
                                         </ul>
                                     </li>
-                                    </ul-->
+                                </ul>
                             </div>
                         </li>
                         <li><a href="javascript:void(0);">일학습병행</a>
@@ -307,42 +306,40 @@
             </div>
             <!-- //상단 비주얼 영역 -->
 
-            <div class="contentArea">
-                <div id="subContentWrap" class="fullContents">
-                    <div class="subContArea">
-                        <div class="contentArea">
-                            <div class="signUpFlow">
-                                <ol class="signUpFlowList" aria-label="총 4단계 중 현재단계 1단계">
-                                    <li aria-current="step" class="on"><em class="stepCount">1</em><span class="txt">가입인증</span></li>
-                                    <li><em class="stepCount">2</em><span class="txt">약관동의</span></li>
-                                    <li><em class="stepCount">3</em><span class="txt"><span class="verPC">회원</span>정보입력</span></span></li>
-                                    <li><em class="stepCount">4</em><span class="txt">가입완료</span></li>
-                                </ol>
-                            </div>
+            <div id="subContentWrap" class="fullContents">
+                <div class="subContArea">
+                    <div class="contentArea">
+                        <div class="signUpFlow">
+                            <ol class="signUpFlowList" aria-label="총 4단계 중 현재단계 1단계">
+                                <li aria-current="step" class="on"><em class="stepCount">1</em><span class="txt">가입인증</span></li>
+                                <li><em class="stepCount">2</em><span class="txt">약관동의</span></li>
+                                <li><em class="stepCount">3</em><span class="txt"><span class="verPC">회원</span>정보입력</span></li>
+                                <li><em class="stepCount">4</em><span class="txt">가입완료</span></li>
+                            </ol>
+                        </div>
 
-                            <div class="singUpCert">
-                                <div class="singUpCertTit">
-                                    <strong>개인정보 가입인증</strong>
-                                    <p class="desc">보인인증 방법을 선택해 주세요.</p>
+                        <div class="singUpCert">
+                            <div class="singUpCertTit">
+                                <strong>개인정보 가입인증</strong>
+                                <p class="desc">보인인증 방법을 선택해 주세요.</p>
+                            </div>
+                            <div class="singUpCertLink">
+                                <div class="singUpCertLinkEle">
+                                    <a href="/" class="singUpLink ty1">휴대폰 본인 인증</a>
                                 </div>
-                                <div class="singUpCertLink">
-                                    <div class="singUpCertLinkEle">
-                                        <a href="/" class="singUpLink ty1">휴대폰 본인 인증</a>
-                                    </div>
-                                    <div class="singUpCertLinkEle">
-                                        <a href="/" class="singUpLink ty2">I-PIN 인증</a>
-                                    </div>
+                                <div class="singUpCertLinkEle">
+                                    <a href="/" class="singUpLink ty2">I-PIN 인증</a>
                                 </div>
                             </div>
-                            <div class="boxBltList contBoxType1">
-                                <ul class="dotList">
-                                    <li>개인정보보호법이 개정(2014.8.7) 시행되어 모든 공공기관 및 민간사업자 등 사회 전체 분야에 불필요한 주민번호 수집이 금지됨에 따라 HRD-Net 시스템 회원가입은 휴대폰 본인확인과 아이핀(I-pin)인증만 가능하도록 개편되었습니다.</li>
-                                    <li>휴대폰 본인확인과 아이핀(I-pin) 인증 중 편리한 방법으로 본인인증을 진행하시기 바랍니다.</li>
-                                    <li>HRD-Net 시스템은 회원중복가입, 개인정보 도용 및 허위 가입정보로 인한 피해를 사전에 방지하고자 금융감독위원회로부터 신용평가 전문기관으로 지정된 서울신용평가정보㈜( <a href="http://www.siren24.com/" target="_blank" title="새창">www.siren24.com</a> )를 통해 본인확인(인증) 서비스를 시행하고 있습니다.</li>
-                                    <li>본인확인(인증) 시 오류발생에 대해서는 서울신용평가정보㈜(1577-1006)으로 문의하여 주시기 바랍니다.</li>
-                                    <li>아울러, 타인 명의로 HRD-Net 시스템에 회원가입시 모든 법적 책임은 명의를 도용한 사람에게 있음을 알려드립니다.</li>
-                                </ul>
-                            </div>
+                        </div>
+                        <div class="boxBltList contBoxType1">
+                            <ul class="dotList">
+                                <li>개인정보보호법이 개정(2014.8.7) 시행되어 모든 공공기관 및 민간사업자 등 사회 전체 분야에 불필요한 주민번호 수집이 금지됨에 따라 HRD-Net 시스템 회원가입은 휴대폰 본인확인과 아이핀(I-pin)인증만 가능하도록 개편되었습니다.</li>
+                                <li>휴대폰 본인확인과 아이핀(I-pin) 인증 중 편리한 방법으로 본인인증을 진행하시기 바랍니다.</li>
+                                <li>HRD-Net 시스템은 회원중복가입, 개인정보 도용 및 허위 가입정보로 인한 피해를 사전에 방지하고자 금융감독위원회로부터 신용평가 전문기관으로 지정된 서울신용평가정보㈜( <a href="http://www.siren24.com/" target="_blank" title="새창">www.siren24.com</a> )를 통해 본인확인(인증) 서비스를 시행하고 있습니다.</li>
+                                <li>본인확인(인증) 시 오류발생에 대해서는 서울신용평가정보㈜(1577-1006)으로 문의하여 주시기 바랍니다.</li>
+                                <li>아울러, 타인 명의로 HRD-Net 시스템에 회원가입시 모든 법적 책임은 명의를 도용한 사람에게 있음을 알려드립니다.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
