--- a/A003/A003001001L_02.html
+++ b/A003/A003001001L_02.html
@@ -447,13 +447,6 @@
                             <div class="contTitEle verM">
                                 <h4 class="tit">필수 동의 항목</h4>
                             </div>
-                        </div>
-                    </div>
-                    <div class="moInner verM">
-                        <div class="termsDiv">
-                            <div class="contTitEle verM">
-                                <h4 class="tit">선택 동의 항목</h4>
-                            </div>
                             <ul class="agrList">
                                 <li>
                                     <div class="tblEle">
@@ -613,6 +606,159 @@
         </nav>
     </div>
     <!-- //하단 고정 메뉴 : Mobile -->
+
+    <!-- HRD-Net 이용약관 -->
+    <div class="layerfullWrap" data-fullpop="fullpop01" style="display:none">
+        <!-- 헤더영역 -->
+        <div class="layerHeader">
+            <div class="layerTitle">
+                <div class="inner">HRD-Net 이용약관</div>
+            </div>
+            <button type="button" class="layerCloseBtn">닫기</button>
+        </div>
+        <!-- //헤더영역 -->
+
+        <!-- 컨텐츠 영역 -->
+        <section class="layerContent">
+            <div class="layerInner">
+                <ul class="agrCont">
+                    <li class="ty1">
+                        <span class="num">1</span> 가. HRD-Net(www.hrd.go.kr, m.hrd.go.kr) 신규가입자 약관(이하 "본 약관" 이라 합니다.)은 회원이 한국 고용정보원에서 제공하는 인터넷 관련 서비스(이하 "서비스"라 합니다.)를 이용함에 있어 이용 조건, 절차, 회원 및 한국고용정보원의 권리, 의무, 책임 및 기타 필요한 제반사항 등을 규정함을 그 목적으로 합니다.
+                    </li>
+                    <li class="ty1">
+                        <span class="num">2</span> 나. 회원이 되고자 하는 자가 한국고용정보원이 정한 소정의 절차를 거쳐서 "동의"단추를 누르면 본 약관에 동의하는 것으로 간주합니다. 본 약관에 정하는 내용 이외의 회원과 한국고용정보원의 권리, 의무 및 책임사항에 관해서는 전기통신사업법 및 기타 대한민국의 관련 법령과 상관습에 의합니다.
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- //컨텐츠 영역 -->
+    </div>
+    <!--// HRD-Net 이용약관 -->
+
+    <div class="layerfullWrap" data-fullpop="fullpop01" style="display:none">
+        <!-- 헤더영역 -->
+        <div class="layerHeader">
+            <div class="layerTitle">
+                <div class="inner">HRD-Net 이용약관</div>
+            </div>
+            <button type="button" class="layerCloseBtn">닫기</button>
+        </div>
+        <!-- //헤더영역 -->
+
+        <!-- 컨텐츠 영역 -->
+        <section class="layerContent">
+            <div class="layerInner">
+                <ul class="agrCont">
+                    <li class="ty1">
+                        <span class="num">1</span> 가. HRD-Net(www.hrd.go.kr, m.hrd.go.kr) 신규가입자 약관(이하 "본 약관" 이라 합니다.)은 회원이 한국 고용정보원에서 제공하는 인터넷 관련 서비스(이하 "서비스"라 합니다.)를 이용함에 있어 이용 조건, 절차, 회원 및 한국고용정보원의 권리, 의무, 책임 및 기타 필요한 제반사항 등을 규정함을 그 목적으로 합니다.
+                    </li>
+                    <li class="ty1">
+                        <span class="num">2</span> 나. 회원이 되고자 하는 자가 한국고용정보원이 정한 소정의 절차를 거쳐서 "동의"단추를 누르면 본 약관에 동의하는 것으로 간주합니다. 본 약관에 정하는 내용 이외의 회원과 한국고용정보원의 권리, 의무 및 책임사항에 관해서는 전기통신사업법 및 기타 대한민국의 관련 법령과 상관습에 의합니다.
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- //컨텐츠 영역 -->
+    </div>
+
+
+    <style>
+        .agrCont {
+            padding-top: 40px;
+        }
+
+        .agrCont>li {
+            position: relative;
+            font-size: 28px;
+            color: #727476;
+            /* text-indent:-28px; margin-left:28px; */
+        }
+
+        .agrCont>li strong {
+            display: block;
+            font-size: 32px;
+            color: #222;
+        }
+
+        .agrCont>li+li {
+            padding-top: 31px;
+            margin-top: 33px;
+            border-top: 1px solid #e2e2e4;
+        }
+
+        .agrCont>li.ty1 {
+            padding-left: 30px;
+        }
+
+        .agrCont>li.ty1 .num {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+
+        .agrCont>li.ty1+li.ty1 .num {
+            top: 31px;
+        }
+
+
+        .layerfullWrap {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 500;
+            width: 100%;
+            height: 100%;
+            padding: 130px 0 0 0;
+            background: #fff;
+        }
+
+        .layerHeader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 101;
+            width: 100%;
+            background: #fff;
+            text-align: center;
+            box-shadow: 0px 0px 20px -3px rgba(0, 0, 0, 0.2)
+        }
+
+        .layerHeader>.layerTitle .inner {
+            font-weight: 500;
+            font-size: 36px;
+            line-height: 108px;
+            color: #4e4f51;
+        }
+
+        .layerContent {
+            position: relative;
+            height: 100%;
+            min-height: 100%;
+            padding: 0 30px 60px 30px;
+            overflow: auto;
+        }
+
+        .layerContent>.layerInner {
+            height: calc(100% - 20px);
+            overflow: auto;
+        }
+
+        .layerCloseBtn {
+            position: absolute;
+            top: 36px;
+            right: 32px;
+            width: 39px;
+            height: 38px;
+            background: url(../new_images/common/btnCloseLayerPop.png) no-repeat;
+            background-size: 100%;
+            text-indent: -9999px;
+        }
+    </style>
+
+
+
 </body>
 
 </html>
