--- a/A003/A003001001L_03.html
+++ b/A003/A003001001L_03.html
@@ -376,6 +376,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="moInner">
                             <div class="tableArea verPC">
                                 <div class="tableTitleArea">
@@ -513,7 +514,12 @@
                             </dl>
                         </div>
 
-                        <div class="btnGroup btnGroupMoTy1">
+                        <div class="btnGroup mt60 verPC">
+                            <button type="button" class="btnType1">취소</button>
+                            <button type="button" class="btnType1 primary">작성완료</button>
+                        </div>
+
+                        <div class="btnGroup mt50 btnGroupMoTy1 verM">
                             <button type="button" class="btnType1">취소</button>
                             <button type="button" class="btnType1 primary">작성완료</button>
                         </div>
