--- a/A003/A003001001L_04.html
+++ b/A003/A003001001L_04.html
@@ -353,12 +353,18 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="contBoxType1">
+                            <div class="contBoxType1 verM">
                                 HRD- Net 개인회원으로 가입하여 주셔서 감사합니다.<br>
 								스마트폰 출결관리, 서비스, 수강평 등록, 동영상 시청 등을 이용하시기 위해서는 반드시 “실명인증”을 하셔야 합니다
                             </div>
 
-                            <div class="btnGroup btnGroupMoTy1">
+                            <div class="btnGroup mt60 verPC">
+                                <button type="button" class="btnType1">실명확인 바로가기</button>
+                                <button type="button" class="btnType1">공인인증서 등록</button>
+                                <button type="button" class="btnType1 primary">메인화면 바로가기</button>
+                            </div>
+
+                            <div class="btnGroup mt60 btnGroupMoTy1 verM">
                                 <button type="button" class="btnType1">실명확인 바로가기</button>
                                 <button type="button" class="btnType1 primary">메인화면 바로가기</button>
                             </div>
