--- a/htmlList.html
+++ b/htmlList.html
@@ -324,35 +324,35 @@
                         <td></td>
                         <td></td>
                         <td><a target="_blank" href="A003/A003001001L.html">A003001001L.html</a></td>
-                        <td class="">PC만 선작업</td>
+                        <td class="">PC</td>
                     </tr>
                     <tr>
                         <td>가입인증</td>
                         <td></td>
                         <td></td>
                         <td><a target="_blank" href="A003/A003001001L_01.html">A003001001L_01.html</a></td>
-                        <td class="">PC만 선작업</td>
+                        <td class=""></td>
                     </tr>
                     <tr>
                         <td>약관동의</td>
                         <td></td>
                         <td></td>
                         <td><a target="_blank" href="A003/A003001001L_02.html">A003001001L_02.html</a></td>
-                        <td class="">PC만 선작업</td>
+                        <td class=""></td>
                     </tr>
                     <tr>
                         <td>회원정보입력</td>
                         <td></td>
                         <td></td>
                         <td><a target="_blank" href="A003/A003001001L_03.html">A003001001L_03.html</a></td>
-                        <td class="">PC만 선작업</td>
+                        <td class=""></td>
                     </tr>
                     <tr>
                         <td>가입완료</td>
                         <td></td>
                         <td></td>
                         <td><a target="_blank" href="A003/A003001001L_04.html">A003001001L_04.html</a></td>
-                        <td class="">PC만 선작업</td>
+                        <td class=""></td>
                     </tr>
                     <tr class="line">
                         <th>공통</th>
